# Surrogate

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE_CHECKLIST.md  Realm.json  Surrogate.json
.ci/: ubuntu-install-packages
.github/: dependabot.yml
.github/workflows/: devskim.yml  release.yml  rust-clippy.yml  rust.yml
src/: main.rs
src/engine/: file.rs  mod.rs  parser.rs
src/engine/parser/: mod.rs
src/engine/template/: mod.rs
src/errors/: mod.rs
src/file_parser/: list.rs
src/logo/: generate.rs  mod.rs
test_templates/hierarchy1/: h1.tpl
