[package]
name = "realm"
version = "0.1.0"
edition = "2021"
authors = ["Venkata S S K M Chaitanya"]
description = "Terraform backend and version templater"
readme = "README.md"

# TODO See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
