[package]
name = "realm"
version = "0.1.0"
edition = "2021"
authors = ["Venkata S S K M Chaitanya"]
description = "Terraform backend and version templater"
readme = "README.md"

# TODO See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
glob = "^0.3"
env_logger = "^0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"

[dev-dependencies]
pretty_assertions = "1.3.0"