[package]
name = "surrogate"
version = "0.0.1"
edition = "2021"
authors = ["Venkata S S K M Chaitanya"]
description = "Terraform backend and version templater"
readme = "README.md"
repository = "https://github.com/vmanikes/Surrogate"
license-file = "LICENSE"

[dependencies]
clap = { version = "^4.1", features = ["derive"] }
glob = "^0.3"
env_logger = "^0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
handlebars = "^5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
